--- a/communications/communications/MainPage.xaml
+++ b/communications/communications/MainPage.xaml
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="communications.MainPage"
              BackgroundColor="{StaticResource SecondaryColor}">
@@ -7,18 +6,20 @@
         <ToolbarItem Text="Logout" Clicked="OnLogoutButtonClicked" />
         <ToolbarItem Text="About Us" Clicked="OnAboutUsButtonClicked" />
     </ContentPage.ToolbarItems>
-    <StackLayout Padding="30" Spacing="20" VerticalOptions="FillAndExpand">
-        <Label Text="User List" Style="{StaticResource HeadingLabel}" />
-        <SearchBar x:Name="UserSearchBar" Placeholder="Search users" TextChanged="OnSearchTextChanged" />
-        <ListView x:Name="UserListView" ItemSelected="OnUserSelected" VerticalOptions="FillAndExpand">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextCell Text="{Binding Username}" />
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackLayout>
+    <ContentView>
+        <ContentView.GestureRecognizers>
+            <SwipeGestureRecognizer Direction="Right" Swiped="OnSwipeRight" />
+        </ContentView.GestureRecognizers>
+        <StackLayout Padding="30" Spacing="20" VerticalOptions="FillAndExpand">
+            <Label x:Name="UserListLabel" Text="User List" Style="{StaticResource HeadingLabel}" />
+            <SearchBar x:Name="UserSearchBar" Placeholder="Search users" TextChanged="OnSearchTextChanged" />
+            <ListView x:Name="UserListView" ItemSelected="OnUserSelected" VerticalOptions="FillAndExpand">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Text="{Binding Username}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
+    </ContentView>
 </ContentPage>
-
-
-
